<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <com.supets.commons.widget.CommonHeader
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="开关配置"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/debugmode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debug_switch"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/jsonswitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/json_switch"
                android:textColor="@android:color/black"
                android:textSize="15sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/interface_filter_guice"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/api"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textColor="#333333"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/apisave"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="15dp"
                    android:background="@color/appcolor"
                    android:padding="10dp"
                    android:text="修改"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"

                android:text="@string/email_name_config"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/emailname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:hint="@string/email_name_label"
                    android:textColor="#333333"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/emailnamesave"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="15dp"
                    android:background="@color/appcolor"
                    android:padding="10dp"
                    android:text="修改"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/emailpass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:hint="@string/email_pass_label"
                    android:textColor="#333333"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/emailpasssave"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="15dp"
                    android:background="@color/appcolor"
                    android:padding="10dp"
                    android:text="修改"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/toast_config"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/toastmode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toast_config1"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/toastinstance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toast_config2"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/toast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toast_config3"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>